// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecoverPassword component should match snapshot with default props 1`] = `
<Fragment>
  <styled.div>
    <styled.div
      data-test="RecoverPassword"
    >
      <styled.div>
        <styled.div>
          <Icon
            color={null}
            cursor={false}
            fixCrossAxisAlign={null}
            height={null}
            type="BrandLogo"
            width={null}
          />
        </styled.div>
      </styled.div>
      <styled.div>
        <styled.h2 />
        <styled.h3 />
        <form
          noValidate={true}
          onSubmit={[Function]}
        >
          <Input
            EnableFixedInput={null}
            autoComplete="new-password"
            dataTest="RecoveryEmail"
            disableKeys={Array []}
            disabled={false}
            fixedValue={null}
            icon="Email"
            label={null}
            msgError={null}
            msgFocusInput={null}
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={null}
            placeholder=""
            tinyLabels={null}
            type="text"
            valid={[Function]}
            value=""
          />
          <styled.div>
            <Button
              actionSecondary={null}
              className={null}
              dataTest="SendButton"
              disabled={true}
              height={null}
              isCallToAction={true}
              isWarning={null}
              onClick={null}
              opacity={0.5}
              paddingSize={null}
              small={false}
              type="submit"
              width="180"
            />
          </styled.div>
          <styled.div>
            <Link
              actionSecondary={false}
              anchor={true}
              dataTest="BackToHomeScreen"
              disabled={false}
              href={null}
              isCallToAction={null}
              loading={false}
              noSpan={true}
              onClick={false}
              opacity={1}
              small={null}
              target={null}
              to="/"
              width={null}
            />
          </styled.div>
        </form>
      </styled.div>
    </styled.div>
  </styled.div>
</Fragment>
`;

exports[`RecoverPassword component should match snapshot with email props 1`] = `
<Fragment>
  <styled.div>
    <styled.div
      data-test="RecoverPassword"
    >
      <styled.div>
        <styled.div>
          <Icon
            color={null}
            cursor={false}
            fixCrossAxisAlign={null}
            height={null}
            type="BrandLogo"
            width={null}
          />
        </styled.div>
      </styled.div>
      <styled.div>
        <styled.h2 />
        <styled.h3 />
        <form
          noValidate={true}
        >
          <Input
            EnableFixedInput={null}
            autoComplete="new-password"
            dataTest="RecoveryEmail"
            disableKeys={Array []}
            disabled={false}
            fixedValue={null}
            icon="Email"
            label={null}
            msgError={null}
            msgFocusInput={null}
            name="email"
            onBlur={[Function]}
            onChange={[MockFunction]}
            onFocus={null}
            placeholder=""
            tinyLabels={null}
            type="text"
            valid={[Function]}
            value="te000steee@asdas.com"
          />
          <styled.div>
            <Button
              actionSecondary={null}
              className={null}
              dataTest="SendButton"
              disabled={false}
              height={null}
              isCallToAction={true}
              isWarning={null}
              onClick={null}
              opacity={0.5}
              paddingSize={null}
              small={false}
              type="submit"
              width="180"
            />
          </styled.div>
          <styled.div>
            <Link
              actionSecondary={false}
              anchor={true}
              dataTest="BackToHomeScreen"
              disabled={false}
              href={null}
              isCallToAction={null}
              loading={false}
              noSpan={true}
              onClick={null}
              opacity={1}
              small={null}
              target={null}
              to="/"
              width={null}
            />
          </styled.div>
        </form>
      </styled.div>
    </styled.div>
  </styled.div>
</Fragment>
`;

exports[`RecoverPassword component should match snapshot with handleUserInput props 1`] = `
<Fragment>
  <styled.div>
    <styled.div
      data-test="RecoverPassword"
    >
      <styled.div>
        <styled.div>
          <Icon
            color={null}
            cursor={false}
            fixCrossAxisAlign={null}
            height={null}
            type="BrandLogo"
            width={null}
          />
        </styled.div>
      </styled.div>
      <styled.div>
        <styled.h2 />
        <styled.h3 />
        <form
          noValidate={true}
        >
          <Input
            EnableFixedInput={null}
            autoComplete="new-password"
            dataTest="RecoveryEmail"
            disableKeys={Array []}
            disabled={false}
            fixedValue={null}
            icon="Email"
            label={null}
            msgError={null}
            msgFocusInput={null}
            name="email"
            onBlur={[Function]}
            onChange={[MockFunction]}
            onFocus={null}
            placeholder=""
            tinyLabels={null}
            type="text"
            valid={[Function]}
            value=""
          />
          <styled.div>
            <Button
              actionSecondary={null}
              className={null}
              dataTest="SendButton"
              disabled={true}
              height={null}
              isCallToAction={true}
              isWarning={null}
              onClick={null}
              opacity={0.5}
              paddingSize={null}
              small={false}
              type="submit"
              width="180"
            />
          </styled.div>
          <styled.div>
            <Link
              actionSecondary={false}
              anchor={true}
              dataTest="BackToHomeScreen"
              disabled={false}
              href={null}
              isCallToAction={null}
              loading={false}
              noSpan={true}
              onClick={null}
              opacity={1}
              small={null}
              target={null}
              to="/"
              width={null}
            />
          </styled.div>
        </form>
      </styled.div>
    </styled.div>
  </styled.div>
</Fragment>
`;
